@@ -5,6 +5,7 @@ void ntp_crypto_srandom(void);
 int ntp_crypto_random_buf(void *buf, size_t nbytes);
 
 long ntp_random (void);
+double ntp_uurandom(void);
 void ntp_srandom (unsigned long);
 void ntp_srandomdev (void);
 char * ntp_initstate (unsigned long, 	/* seed for R.N.G. */
